infra/terraform/gke/service-neg.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  labels:
        name: hello-kubernetes
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: hello-kubernetes
